# y-crdt

./: .gitignore  Cargo.toml  LICENSE  README.md  funding.json
.github/workflows/: ci-build.yml  main.yml  release.yml  rust.yml  wheels.yml  y-py.yml
.well-known/: funding-manifest-urls
assets/editing-traces/: README.md
assets/editing-traces/sequential_traces/: README.md
benches/: benches.rs  ytext_benchmark.rs
benchmarks-wasm/: package-lock.json  package.json  tsconfig.json
benchmarks-wasm/benchmarks/: results.json
benchmarks-wasm/benchmarks/ywasm/: benchmark.html  bundle.js  factory.js  package-lock.json  package.json  rollup.config.js  run.js
benchmarks-wasm/js-lib/: b1.js  b2.js  b3.js  b4.js  index.js  rollup-helper.js  utils.js
c-tests/: CMakeLists.txt  main.c
examples/: example.rs  insert.rs
ffi-tests/: CMakeLists.txt  main.cpp
ffi-tests/include/: doctest.h  libyrs.h  yrs.h
lib0/: Cargo.toml
lib0/benches/: lib0_benchmarks.rs
lib0/src/: any.rs  binary.rs  decoding.rs  encoding.rs  error.rs  json_parser.rs  lib.rs  macros.rs  number.rs  serde.rs
lib0/src/serde/: de.rs  mod.rs  ser.rs
lib0/tests/: encoding_test.rs  json_test.rs
src/: block.rs  block_store.rs  client_hasher.rs  doc.rs  encoding.rs  lib.rs  shared_type.rs  transaction.rs
tests-ffi/: CMakeLists.txt  main.cpp
tests-ffi/include/: doctest.h  libyrs.h
tests-wasm/: awareness.tests.js  editing-traces.tests.js  index.js  package-lock.json  package.json  relative-position.tests.js  sticky-index.tests.js  testHelper.js  y-array.tests.js  y-doc.tests.js  y-map.tests.js  y-text.tests.js  y-undo.tests.js  y-weak-link.tests.js  y-xml.tests.js
wasm-tests/: index.js  package-lock.json  package.json  testHelper.js  y-array.tests.js  y-map.tests.js  y-text.tests.js  y-xml.tests.js
y-py/: .gitignore  Cargo.toml  README.md
y-py/src/: lib.rs
y-py/tests/: sample_code.py  test_helper.py  test_y_array.py  test_y_doc.py  test_y_map.py  test_y_text.py  test_y_xml.py
yffi/: Cargo.toml  README.md  cbindgen.toml
yffi-impl/: Cargo.toml  README.md
yffi-impl/src/: lib.rs
yffi/src/: lib.rs
yrs/: Cargo.toml  README.md
yrs-api-wrapper/: Cargo.toml  README.md  cbindgen.toml
yrs-api-wrapper/src/: lib.rs
yrs-python/: Cargo.toml  README.md
yrs-python/src/: lib.rs
yrs-python/tests/: sample_code.py
yrs/benches/: benches.rs  id_set.rs  serialization.rs
yrs/editing-traces/concurrent_traces/: README.md
yrs/examples/: custom_provider.rs  example.rs  gen_bench_data.rs
yrs/src/: alloc.rs  alt.rs  any.rs  atomic.rs  bit_vec.rs  block.rs  block_iter.rs  block_store.rs  branch.rs  capi.rs  cell.rs  client_hasher.rs  compatibility_tests.rs  cursor.rs  doc.rs  edit_traces_tests.rs  encoding.rs  error.rs  event.rs  gc.rs  id_map.rs  id_set.rs  ids.rs  input.rs  iter.rs  lazy.rs  lib.rs  lockfree.rs  moving.rs  observer.rs  out.rs  relative_position.rs  shared_type.rs  slice.rs  state_vector.rs  sticky_index.rs  store.rs  test_utils.rs  transact.rs  transaction.rs  (+6 more)
yrs/src/encoding/: mod.rs  read.rs  varint.rs  write.rs
yrs/src/encoding/serde/: de.rs  mod.rs  ser.rs
yrs/src/json_path/: iter_any.rs  iter_txn.rs  mod.rs  parse.rs
yrs/src/sync/: awareness.rs  mod.rs  protocol.rs  time.rs
yrs/src/tests/: compatibility_tests.rs  decoder_v1_clientid_above_u32.rs  edit_traces.rs  edit_traces_tests.rs  large_client_id_tests.rs  mod.rs
yrs/src/types/: array.rs  map.rs  mod.rs  text.rs  weak.rs  xml.rs
yrs/src/updates/: decoder.rs  encoder.rs  mod.rs
yrs/src/utils/: mod.rs
ywasm/: Cargo.toml  LICENSE  README.md
ywasm/src/: array.rs  awareness.rs  collection.rs  doc.rs  js.rs  lib.rs  map.rs  text.rs  transaction.rs  undo.rs  weak.rs  xml.rs  xml_elem.rs  xml_frag.rs  xml_text.rs
ywasm/www/: index.js  package-lock.json  package.json
