[package]
name = "yrs"
version = "0.1.0"
authors = ["Kevin Jahns <kevin.jahns@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.0", features = ["wasm-bindgen"] }
wasm-bindgen = "^0.2.63"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "ytext_benchmark"
harness = false

