[package]
name = "yrs"
version = "0.1.0"
authors = ["Kevin Jahns <kevin.jahns@pm.me>"]
edition = "2018"

[dependencies]
rand = { version = "0.7.0", features = ["wasm-bindgen"] }
wasm-bindgen = "^0.2.63"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "benches"
harness = false

[lib]
doctest = true
bench = true
doc = true
