[package]
name = "lib0"
version = "0.5.0"
authors = ["Kevin Jahns <kevin.jahns@pm.me>","Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Efficient binary encoding library for Yrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
criterion = "^0.3"
proptest = "^1.0.0"
proptest-derive = "0.3.0"
serde_json = "1.0"

[[bench]]
name = "lib0_benchmarks"
harness = false

[lib]
doctest = true
bench = true
doc = true
