[package]
name = "lib0"
version = "0.14.1"
authors = ["Kevin Jahns <kevin.jahns@pm.me>","Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Efficient binary encoding library for Yrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lib0-serde = ["serde", "serde_json"]

[dependencies]
thiserror = "1"
serde = { version = "1.0", optional = true, default-features = false }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "^0.3"
proptest = "^1.0.0"
proptest-derive = "0.3.0"
# Serde derive feature required for tests
serde = { version = "1.0", features = ["derive"]}


[[bench]]
name = "lib0_benchmarks"
harness = false

[lib]
doctest = true
bench = true
doc = true
