[package]
name = "lib0"
version = "0.16.10"
authors = ["Kevin Jahns <kevin.jahns@pm.me>","Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Efficient binary encoding library for Yrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { version = "^1.0" }
serde_json = { version = "^1.0" }

[dev-dependencies]
criterion = "^0.5"
proptest = "^1.0.0"
proptest-derive = "0.3.0"

[[bench]]
name = "lib0_benchmarks"
harness = false

[lib]
doctest = true
bench = true
doc = true
