[package]
name = "y-py"
version = "0.2.2"
authors = ["Pierre-Olivier Simonard <pierre.olivier.simonard@gmail.com>", "Kevin Jahns <kevin.jahns@protonmail.com>", "John Waidhofer <waidhoferj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "y_py"
crate-type = ["cdylib"]

[dependencies]
yrs = { path = "../yrs", version = "0.3.0"}
lib0 = { path = "../lib0", version = "0.3.0"}

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]
