[package]
name = "yffi-impl"
version = "0.19.2"
authors = ["Kevin Jahns <kevin.jahns@protonmail.com>", "Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
keywords = ["crdt", "c-ffi", "yrs"]
edition = "2018"
license = "MIT"
description = "Bindings for the Yrs native C foreign function interface"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs = { path = "../yrs", version = "0.19.2", features = ["weak"] }
