[package]
name = "yrs-api-wrapper"
version = "0.1.0"
authors = ["Kevin Jahns <kevin.jahns@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies]
lib0 = { path = "../lib0" }
yrs = { path = "../yrs" }

[lib]
crate-type = ["staticlib"]
name = "yrs"