[package]
name = "yrs-python"
version = "0.1.0"
authors = ["Pierre-Olivier Simonard <pierre.olivier.simonard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yrs"
crate-type = ["cdylib"]

[dependencies]
yrs-api-wrapper = {path="../yrs-api-wrapper"}
pythonize = "0.13.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
