[package]
name = "yrs"
version = "0.16.9"
description = "High performance implementation of the Yjs CRDT"
license = "MIT"
authors = ["Kevin Jahns <kevin.jahns@pm.me>", "Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
keywords = ["crdt", "yrs"]
edition = "2018"
homepage = "https://github.com/y-crdt/y-crdt/"
repository = "https://github.com/y-crdt/y-crdt/"
readme = "./README.md"

[dependencies]
thiserror = "1"
rand = { version = "0.7.0", features = ["wasm-bindgen"] }
lib0 = { path = "../lib0", version = "0.16.9" }
smallstr = { version = "0.2", features = ["union"]}
smallvec = { version = "1.10", features = ["union", "const_generics", "const_new"]}
atomic_refcell = "0.1"

[dev-dependencies]
criterion = "^0.5"
flate2 = { version = "1.0.22", features = ["zlib-ng-compat"], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
ropey = "1.6.0"

[[bench]]
name = "benches"
harness = false

[lib]
doctest = true
bench = true
doc = true
