[package]
name = "yrs"
version = "0.16.10"
description = "High performance implementation of the Yjs CRDT"
license = "MIT"
authors = ["Kevin Jahns <kevin.jahns@pm.me>", "Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
keywords = ["crdt", "yrs"]
edition = "2018"
homepage = "https://github.com/y-crdt/y-crdt/"
repository = "https://github.com/y-crdt/y-crdt/"
readme = "./README.md"

[dependencies]
thiserror = "1"
rand = { version = "0.7.0", features = ["wasm-bindgen"] }
smallstr = { version = "~0.3", features = ["union"]}
smallvec = { version = "~1.11", features = ["union", "const_generics", "const_new"]}
atomic_refcell = "0.1"
serde = { version = "~1.0" }
serde_json = "~1.0"

[dev-dependencies]
criterion = "~0.5"
flate2 = { version = "1.0.22", features = ["zlib-ng-compat"], default-features = false }
ropey = "1.6.0"
proptest = "~1.2"
proptest-derive = "0.3.0"

[[bench]]
name = "benches"
harness = false

[lib]
doctest = true
bench = true
doc = true
